soroban-sdk/tests/trybuild/contractfile_with_sha256_verify_fail.stderr
error: sha256 does not match, expected: 797acfc51769afd405d7176aa913b754301474e3b4a2c8317860ce02efc54b60
 --> tests/trybuild/contractfile_with_sha256_verify_fail.rs:3:5
  |
3 |     sha256 = "0000000000000000000000000000000000000000000000000000000000000000",
  |     ^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/trybuild/contractfile_with_sha256_verify_fail.rs:4:3
  |
4 | );
  |   ^ consider adding a `main` function to `$DIR/tests/trybuild/contractfile_with_sha256_verify_fail.rs`
